edited file name
Edit old index file name to index.html

--- a/Jan_Fresh.html
+++ b/Jan_Fresh.html
@@ -24,7 +24,7 @@
             <nav>
                 <i class="fa fa-bars fa-3x menu-toggle"></i>
                 <div class="menu-dropdown">
-                    <a href="Jan_Kitchen_Index.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="Jan_Bakery.html">Bakery</a>
                     <a href="Jan_Home_Kitchen.html">Home Kitchen</a>
                     <a class ="activeLink" href="Jan_Fresh.html">Health and Beauty</a>
