--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <i class="fa fa-bars fa-3x menu-toggle"></i>
                 <div class="menu-dropdown">
-                    <a class ="activeLink" href="Jan_Kitchen_Index.html">Home</a>
+                    <a class ="activeLink" href="index.html">Home</a>
                     <a href="Jan_Bakery.html">Bakery</a>
                     <a href="Jan_Home_Kitchen.html">Home Kitchen</a>
                     <a href="Jan_Fresh.html">Health and Beauty</a>
